# LestaPhoneBook

./: README.md
PhoneBookClientConsole/: main.py  phone_book_client.py
PhoneBookClientGUI/: gui_dialogs.py  gui_dialogs_handlers.py  gui_dialogs_manager.py  gui_main.py  main.py  phone_book_client.py
PhoneBookServer/: CMakeLists.txt
PhoneBookServer/headers/: linux_getch_function.h  phone_book_database.h  phone_book_server.h  string_functions.h
PhoneBookServer/sources/: main.cpp  phone_book_database.cpp  phone_book_server.cpp  string_functions.cpp
protos/: connection.proto
